--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "aos": "^3.0.0-beta.5",
     "axios": "^0.18.0",
     "vue": "^2.5.16",
