--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aos": "^3.0.0-beta.5",
     "axios": "^0.18.0",
     "vue": "^2.5.16",
+    "vue-i18n": "^8.1.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
