--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/polyfill": "^7.0.0",
     "aos": "^3.0.0-beta.5",
     "axios": "^0.18.0",
+    "parallax-js": "^3.1.0",
     "svg-country-flags": "^1.2.6",
     "vue": "^2.5.16",
     "vue-i18n": "^8.1.0",
