--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "@babel/polyfill": "^7.0.0",
     "aos": "^3.0.0-beta.5",
     "axios": "^0.18.0",
+    "gsap": "^2.0.2",
+    "imports-loader": "^0.8.0",
+    "jquery": "^3.3.1",
     "parallax-js": "^3.1.0",
+    "scrollmagic": "^2.0.5",
     "svg-country-flags": "^1.2.6",
     "vue": "^2.5.16",
     "vue-i18n": "^8.1.0",
