--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.5.16",
     "vue-i18n": "^8.1.0",
     "vue-masked-input": "^0.5.2",
+    "vue-meta": "^1.5.8",
     "vue-router": "^3.0.1",
     "vue-select": "^2.5.1",
     "vue-smooth-picker": "^0.3.9",
