--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "gsap": "^2.0.2",
     "imports-loader": "^0.8.0",
     "jquery": "^3.3.1",
+    "js-cookie": "^2.2.0",
+    "moment": "^2.24.0",
     "parallax-js": "^3.1.0",
     "particles.js": "^2.0.0",
     "scrollmagic": "^2.0.5",
